// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build command (html entry) builds a simple HTML entry point 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>

`;

exports[`build command (html entry) includes referenced CSS from HTML 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.0.css
---------------------------------
/* styles/app.css */
.app {
  background: green;
}

/* styles/entry.css */
body {
  background: red;
}

---------------------------------
entry.1.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="stylesheet" href="entry.0.css" />
    <script defer="" type="module" src="entry.1.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>

`;

exports[`build command (html entry) includes referenced CSS from JS 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.css
---------------------------------
/* src/app.css */
.app {
  background: green;
}

/* src/entry.css */
body {
  background: red;
}

---------------------------------
entry.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <script defer="" type="module" src="entry.js"></script>
    <link href="entry.css" rel="stylesheet" />
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>

`;

exports[`build command (html entry) includes referenced assets from HTML 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

---------------------------------
favicon.png
---------------------------------
IMA FAVICON
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="apple-touch-icon" href="favicon.png" />
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>

`;

exports[`build command (html entry) includes referenced assets from style tags 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
cats.jpg
---------------------------------
MEOW
---------------------------------
entry.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <style>
      body {
        background: url(cats.jpg);
      }
    </style>
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>

`;

exports[`build command (html entry) supports automatic react runtime 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
"use strict";
var __getOwnPropNames = Object.getOwnPropertyNames;
var __esm = (fn, res) =>
  function __init() {
    return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])((fn = 0))), res;
  };
var __commonJS = (cb, mod) =>
  function __require() {
    return (
      mod ||
        (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod),
      mod.exports
    );
  };

// src/app.tsx
import { jsxDEV as _jsxDEV } from "react/jsx-dev-runtime";
function App() {
  return /* @__PURE__ */ _jsxDEV(
    "div",
    {
      children: "Hello world",
    },
    void 0,
    false,
    {
      fileName: "<CWD>/src/app.tsx",
      lineNumber: 3,
      columnNumber: 22,
    },
    this
  );
}
var init_app = __esm({
  "src/app.tsx"() {
    "use strict";
  },
});

// src/entry.tsx
import { jsxDEV as _jsxDEV2 } from "react/jsx-dev-runtime";
import ReactDOM from "react-dom";
var require_entry = __commonJS({
  "src/entry.tsx"(exports) {
    init_app();
    ReactDOM.render(
      /* @__PURE__ */ _jsxDEV2(
        App,
        {},
        void 0,
        false,
        {
          fileName: "<CWD>/src/entry.tsx",
          lineNumber: 4,
          columnNumber: 29,
        },
        exports
      ),
      document.getElementById("root")
    );
  },
});
export default require_entry();

---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>

`;

exports[`build command (html entry) writes integrity hashes if requested 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
cats.jpg
---------------------------------
MEOW
---------------------------------
entry.0.css
---------------------------------
/* styles/entry.css */
body {
  background: red;
}

---------------------------------
entry.1.js
---------------------------------
"use strict";

// src/entry.tsx
import ReactDOM from "react-dom";
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render(
  /* @__PURE__ */ React.createElement(App, null),
  document.getElementById("root")
);

---------------------------------
favicon.png
---------------------------------
IMA FAVICON
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <style>
      body {
        background: url(cats.jpg);
      }
    </style>
    <link
      rel="apple-touch-icon"
      href="favicon.png"
      integrity="sha256-m/XpYP27F4yCq5KBTKxEzP5x4gZBZjo5zeuDXbm+ypw="
    />
    <link
      rel="stylesheet"
      href="entry.0.css"
      integrity="sha256-h7N0aRQFgi82y9VoYyAN3AlXuyhJ58bQ1uWjjffOWm4="
    />
    <script
      defer=""
      type="module"
      src="entry.1.js"
      integrity="sha256-G+8cIhNOB8sjtG83JWIWRRdO5jr4vBKklXXX+uuvfsw="
    ></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>

`;
